web/html/src/branding/css/uyuni/legacy-theme.less
/* ... */
.spacewalk-list .spacewalk-list-top-addons .spacewalk-list-pagination {
  float: right;
  width: auto;
  margin-bottom: 18px;
}

//PAGINATOR from 0 - 9 and A - Z
.spacewalk-list .spacewalk-list-head-addons .spacewalk-list-alphabar,
.spacewalk-list .spacewalk-list-top-addons .spacewalk-list-alphabar {
  padding: 0;
  padding-bottom: .5em;
  float: left;
  width: auto;
  margin-top: 5px;
  margin-left: 10px;
  .dropdown-menu {
    display: none;
    width: auto;
    right: 0;
    min-width: 100px;
    z-index: 10;
    max-height: 250px;
    overflow-y: auto;
    text-align: right;
    li {
      display: block;
      padding: 0 1px;
      a {
        display: block;
        border: 0px;
        color: #428bca;
        padding: 2px 20px;
      }
    }
    li.disabled {
      a {
        color: #aaa;
      }
    }
    li:nth-child(11) {
      border-top: 1px solid #dddddd;
    }
  }
  .dropdown.dropdown-alphabar.open {
    .dropdown-menu {
      display: block;
    }
  }
}

// Filter by system: button besides the input search
.spacewalk-button-filter{
  border-left: 0;
  color: #666666;
  background-color: #ffffff;
  border-color: #cccccc;
}

.spacewalk-list {
  .spacewalk-list-head-addons {
    .spacewalk-list-head-addons-extra {
      float: right;
      width: auto;
    }
    .spacewalk-list-filter {
      input.with-bottom-margin {
        margin-bottom: .5em;
      }
    }
  }
}

//Table's filters
.filter-input{
  padding: .7em;
  .col-md-3{
    padding-left: 0
  }
  .col-md-9{
    padding-right: 0
  }
}
.display-number{
  .input-sm;
  display: inline-block;
  width: 5em;
  border: 1px solid #dddddd;
  background-color: @gray-light-2;
}
.view-systems-registered{
  .input-sm;
  width: 10em;
  display: inline-block;
  border: 1px solid #dddddd;
}

/* Icons Legend */
.sideleg {
  background: @icon-legend;
  color: @icon-legend-text;
  padding: .5em 1em;
  border-radius: 0px 0px 4px 4px;
  .hidden-sm;
  .hidden-xs;
  li {
    list-style: none;
    margin: 0.5em 0;
    padding:0;
    white-space: nowrap;
  }
  ul {
    margin: 0;
    padding: 0
  }
}

/* question symbol for help pop up*/
h1 .fa-stack .fa-question {
  font-size: .6em;
}
h1 .fa-stack {
  width: 1em;
  height: 1em;
  line-height: .7em;
}
.fa-stack .fa-circle {
  font-size: .7em;
  .text-info;
}

// Panels: reseting default margins and paddings in H tags
.panel .panel-heading{
  h1, h2, h3, h4, h5, h6{
    padding: 0;
    margin: 0;
  }
}
//Panels: deleting border-top in the first row of a table contained within a Panel class
.panel-body tr:first-child{
  td, th{
    border-top: 0;
  }
}

/* systems selected tool*/
.spacewalk-toolbar>a, #spacewalk-bar-off i {
  cursor: pointer;
}
#show-systems-bar {
  padding: .5em 1.2em;
  background: #fff;
  border:1px solid #ccc;
  border-radius: 0 0 4px 4px;
}

/* spacewalk toolbar: contains the H1 of each page + the toolbar */
.spacewalk-toolbar-h1 {
  margin-bottom: 1.5em;
  .spacewalk-toolbar {
    .pull-right;
    padding: .5em 1em;
    a {
      border-right:1px solid @gray-light;
      padding: 0 .5em
    }
    a:hover {
      text-decoration: none;
    }
    a:last-child {
      border-right:0
    }
  }
}

/* Margins to elements */
//margins bottom
.margin-bottom-xs {
  margin-bottom: .5em;
}
.margin-bottom-sm {
  margin-bottom: 1em;
}
.margin-bottom-md {
  margin-bottom: 2em;
}
.margin-bottom-lg {
  margin-bottom: 3em;
}
//margins top
.margin-top-xs {
  margin-top: .5em;
}
.margin-top-sm {
  margin-top: 1em;
}
.margin-top-md {
  margin-top: 2em;
}
.margin-top-lg {
  margin-top: 3em;
}


/* adding margin to the icons in fontawesome */
i[class~="fa"],
i[class^="icon-"],
i[class*=" icon-"],
i[class*="spacewalk-icon"],
i[class^="spacewalk-icon"] {
  margin-right: .5em;
}
/* if the icon is inside a H tag the margin is a bit smaller*/
h1, h2, h3, h4, h5, h6 {
  i[class~="fa"],
  i[class^="icon-"],
  i[class*=" icon-"],
  i[class^="fa-"],
  i[class*="spacewalk-icon"],
  i[class^="spacewalk-icon"] {
    margin-right: .3em;
  }
}
/* use this class to add text to the left of an icon */
i[class~="fa-right"] {
  margin-left: 0.5em;
  margin-right: 0em;
}

// icon size smaller than the ones default by Font Awesome
.fa-1-5x {
  font-size: 1.3em;
}
.fa-1-5x.icon-border {
  border-width: 2px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}

// alerts
.alert {
  margin: 18px 0;
}

// data lists

.spacewalk-list {

  .spacewalk-list-top-addons {
    margin-bottom: 0;
    padding-top: 0;
  }

  .spacewalk-list-footer-addons {
    .make-row(0);
    .spacewalk-list-footer-addons-extra {
      .pull-left;
      .text-left;
    }
  }
}

.spacewalk-csv-download {
  .pull-right;
}

/* btn with margin top and bottom */
.btn.spacewalk-btn-margin-vertical {
  margin: 1em 0
}
//tabs - adding a margin to all tabs
ul.nav.nav-tabs {
  margin-bottom: .2em
}
//tabs - adding a margin button to the last UL
ul.nav.nav-tabs:last-child {
  margin-bottom: 1.5em
}

// Rewriting
// Jumbotron
// --------------------------------------------------


.jumbotron {
  padding: @jumbotron-padding;
  margin-bottom: @jumbotron-padding;
  font-size: (@font-size-base * 1.3);
  line-height: (@line-height-base * 1.5);
  background-color: transparent;
  border: 1px solid #ccc;

  h1 {
    line-height: 1;
  }
  p {
    line-height: 1.4;
  }

  @media screen and (min-width: @screen-tablet) {
    padding-top:    (@jumbotron-padding * 1);
    padding-bottom: (@jumbotron-padding * 1);

    .container & {
      padding-left:  (@jumbotron-padding * 2);
      padding-right: (@jumbotron-padding * 2);
    }

    h1 {
      font-size: (@font-size-base * 3.5);
    }
  }
}

/* Create new Admin User form.
This class will align the text inside the tables of each panel in the form with name="createSatelliteForm"
*/
form[name="createSatelliteForm"] table {
  text-align: left;
}
//giving top margin to the panels
form[name="createSatelliteForm"] .panel {
  margin-top: 30px;
}
/* ... */

